# FlashIt

./: config.py  controllers.py  flashcard.sqlite3  main.py  models.py  pyproject.toml
templates/: Decks.html  Index.html  Play.html  newCard.html  newDeck.html  signin.html  signup.html  updateCard.html  viewCard.html  viewDeck.html
templates/static/: index.css
